/** Service responsible for coordinating cluster/environment metrics */
syntax = "proto3";

package workflow;

option go_package = "./pb";

service metrics {
  rpc ClusterRequests (ClusterRequestsRequest) returns (ClusterRequestsResponse) {}
  rpc ClusterResponseCodes (ClusterResponseCodesRequest) returns (ClusterResponseCodesResponse) {}
  rpc Requests (RequestsRequest) returns (RequestsResponse) {}
  rpc ResponseCodes (ResponseCodesRequest) returns (ResponseCodesResponse) {}
  rpc ResponseTimes (ResponseTimesRequest) returns (ResponseTimesResponse) {}
  rpc CacheRatio (CacheRatioRequest) returns (CacheRatioResponse) {}
}

message ClusterRequestsRequest {}

message ClusterRequestsResponse {
  repeated MetricClusterRequests Metrics = 1;
}

message MetricClusterRequests {
  string Date = 1;
  int64 Requests = 2;
}

message ClusterResponseCodesRequest {}

message ClusterResponseCodesResponse {
  repeated MetricClusterResponseCodes Metrics = 1;
}

message MetricClusterResponseCodes {
  string Date = 1;
  // https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Status
  int64 Server = 2;
  int64 Client = 3;
  int64 Redirection = 4;
  int64 Successful = 5;
}

message RequestsRequest {}

message RequestsResponse {
  repeated MetricRequests Metrics = 1;
}

message MetricRequests {
  string Date = 1;
  int64 Requests = 2;
}

message ResponseCodesRequest {}

message ResponseCodesResponse {
  repeated MetricResponseCodes Metrics = 1;
}

message MetricResponseCodes {
  string Date = 1;
  // https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Status
  int64 Server = 2;
  int64 Client = 3;
  int64 Redirection = 4;
  int64 Successful = 5;
}

message ResponseTimesRequest {}

message ResponseTimesResponse {
  repeated MetricResponseTimes Metrics = 1;
}

message MetricResponseTimes {
  string Date = 1;
  int64 Average = 2;
  int64 P95 = 3;
  int64 P99 = 4;
}

message CacheRatioRequest {}

message CacheRatioResponse {
  repeated MetricCacheRatio Metrics = 1;
}

message MetricCacheRatio {
  string Date = 1;
  int64 Hit = 2;
  int64 Miss = 3;
}